<resources>
	<string name="app_name">Karibu Nairobi</string>
	<string name="legal">Legal Notices</string>
	<string name="no_maps">Google Maps V2 not available!</string>
	<string name="normal">Normal</string>
	<string name="hybrid">Hybrid</string>
	<string name="satellite">Satellite</string>
	<string name="terrain">Terrain</string>
	<string name="un">M:Lab East Africa</string>
	<string name="united_nations">M:Lab East Africa</string>
	<string name="lincoln_center">Petes Coffee</string>
	<string name="lincoln_center_snippet">Home of Jazz at Lincoln Center</string>
	<string name="carnegie_hall">Carnegie Hall</string>
	<string name="practice_x3">Where you go with practice, practice, practice</string>
	<string name="downtown_club">The Downtown Club</string>
	<string name="heisman_trophy">Original home of the Heisman Trophy</string>
  <string name="icon">CommonsWare logo</string>
<string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Karibu Nairobi</string>
    <string name="whataboutTitle">Welcome to Nairobi &#160;&#160;&#160; &#160;&#160;</string>
    <string name="FeedbackActivityTitle">Feedback</string>
    <string name="introTitle">Introduction</string>
    <string name="sacramentsTitle">Sacraments</string>
    <string name="prayersTitle">Hotels &amp; Restaurants</string>
    <string name="quetionsTitle">Supermarkets</string>
    <string name="commandmentsTitle">Cab Services</string>
    <string name="creedTitle">Attractions</string>
    <string name="parishTitle">Bars &amp; clubs </string>
    <string name="aboutTitle">Bus Stations</string>
    <string name="ChristianInitiationSacraments">Christian Initiation Sacraments</string>
    <string name="SacramentsofHealing"> Sacraments of Healing</string>
    <string name="ServiceofCommunionSacraments">Service of Communion Sacraments</string>
    <string name="d11">Characterized by comfort and elegance Hilton is the perfect hotel for business travelers and families as well. Located in the heart of the city it has an incredible view to its environs. The hotel is well equipped with a fitness centre, gift shops, clothing stores, beauty salon, internet, secretarial and babysitting services, and shuttle services to and from the hotel. Not forgetting that pets are allowed.</string>
    <string name="c11">Mama Ngina St, City Centre\n
Cell: +254 724 775027\n
       +254 739 208630\n
Tel: 020 260 8702\n
        020 228 8000\n</string>
    <string name="m11">36.81866,-1.2843</string>
     <string name="d12">Nairobi Serena Hotel is a 5 Star wonder combining both modern design and traditional artwork with rooms designed along pan African themes. Its well equipped with a heated swimming pool gym and spa treatment centre and conference facilities.</string>
      <string name="c12">Kenyatta Avenue\n
P.O. Box 46302, City Centre, 00100\n
Tel: +254 20 2822000\n
Nairobi@serena.co.ke\n</string>
    <string name="m12">36.8186,-1.28374</string>
    <string name="w12">http://serena.co.ke</string>
<string name="d13">Nairobi Safari club offer 5 Star services elegant accommodation and modern amenities.  All accommodation is suites with internet access, satellite television direct dial telephones and Jacuzzi- style tubs in the bathrooms.  The safari restaurant offers upscale fine dining with an international menu. The hotel is equipped with a gym steam bath and sauna and a heated swimming pool.  It also has conference rooms serving a variety of meeting and social events.</string>
    <string name="c13">Koinange Street, and University Way\n
P.O. Box: 43564 - 00100, Nairobi, Kenya\n
Telephone: 254-20-2821000, 
Cellphone: 254-722209842 / 722208782 / \n
734251333 / 734251334\n
 Email: info@nairobisafariclub.com \n
  Reservation: reservations@nairobisafariclub.com\n
        </string>
    <string name="w13">http://nairobisafariclub.com</string>
    <string name="m13">36.81745,-1.28049</string>
<string name="d14">Laico Regency Hotel caters mainly to the growing demand of business travelers and congress seminars organizers. It offers quality accommodation as well as inspiring conference facilities. It offers quality services to ensure guests’ comfort at all times within a warm and welcoming atmosphere.</string>
    <string name="c14">10 Market Street, Uhuru Highway\n
P.O. BOX 57549-00200 NAIROBI\n
Phone +254-20-2211199\n
             +254-20-2887000\n
 Fax     +254-20-2217120\n 
Email: reservations@laicoregencyhotel.co.ke\n
        
        
    </string>
    <string name="w14">http://laicoregencyhotel.co.ke</string>
    <string name="m14">36.81677,-1.28383</string>
<string name="d15">Fairmont hotel is an old establishment of the colonial days dating back to 1904. It has a luxurious 5 star serenity, geared with modern convenience. Fairmont has spacious rooms with stunning interiors, being individually furnished in keeping with the rest of the hotels plush décor. The style and quality of the food is superb from it wide range of restaurants and bars.</string>
    <string name="c15">Harry Thuku Road, Nairobi.\n
P.O. BOX 58581, City Centre 00200\n
TEL: +254(0) 20 2265555\n
FAX: +254(0) 20 2216796\n
EMAIL: Kenya.reservations@fairmont.com\n
        
        
    </string>
    <string name="w15">http:fairmont.com/</string>
    <string name="m15">36.8167,-1.2771</string>
<string name="d16">The Panari Hotel is perfectly situated close to the international airport. It’s a place of luxury with additional interesting features such as one of the few ice skating rinks found in Africa.</string>
    <string name="c16">Mombasa Road \n
P.O.BOX 4372-00506 Nairobi\n
TEL: +254(020) 3946000, 828990/3\n
CELL: +254-0733 694600/1/2 or 075694600/1/2\n
EMAIL: reservations@panarihotels.com\n
             events@panarihotels.com\n
        
        
    </string>
    <string name="w16">http://panarihotels.com</string>
    <string name="m16">36.85587,-1.32855</string>
<string name="d17">Ole Sereni hotel is often referred to as the city hotel by the game park; it offers luxury through the combination of comfort, the wind and the wild. It has business and fitness amenities geared with state of the art facilities. Ole Sereni serves the best of 5 different cuisines served at the Big Five restaurant, the Waterhole and the fine dining Eagles’ Lounge. The hotel is also in close proximity to the International Airport.</string>
    <string name="c17">Mombasa Road\n
P.O.BOX 18187-00500 Nairobi\n
TEL: +254-732 191 000\n
 FAX: +254 20 3901 400\n
EMAIL: info@ole-serenihotel.com\n
        
        
    </string>
    <string name="w17">http://ole-serenihotel.com</string>
    <string name="m17">36.84049,-1.32092</string>
<string name="d18">The Giraffe Manor is a unique, exciting and stylish place to stay. It is in close proximity to the many giraffes who wander about the grounds. It offers amazing accommodation with six en-suite bedrooms with one made specially for children. It allows guests to organize events for upto 20 people.</string>
    <string name="c18">PO Box 15004, Langata, 00509\n
No: 020 2513166\n

        
        
    </string>
    <string name="w18">http://giraffemanor.com</string>
    <string name="m18">36.7445,-1.3744</string>
<string name="d19"> Mokoyeti Resort is equipped with a water park, a river, a pool, wireless internet access, meeting rooms for small groups, business services, a bar, restaurant, and not forgetting the 24 hour room service. </string>
    <string name="c19">
        
    </string>
    <string name="w19">http://gg.com</string>
    <string name="m19">36.75204,-1.33160</string>
<string name="d110">Java House has a cosy feel and cool design characterized by amazing array of artwork. Convenient located in the heart of the City it is an amazing place to hang out and have tantalizing cuisines from all over the world. To add to all that it is one of Kenya’s most successful coffee houses.</string>
    <string name="c110">Mama Ngina Street, City Centre\n
P.O Box 21533-00505\n
Tel: +254 020 313564/5\n
        
        
    </string>
    <string name="w110"></string>
    <string name="m110">36.82280,-1.28585</string>
<string name="d111">The Thorn Tree café is a historic open-air bistro style café has been a popular meeting place for travelers and business people since 1959.  There is live Jazz, Rock, Reggae, African fusion, and soul music make for daily evening entertainment. The café serves a wide range of dishes made to perfection in the most original ways possible.</string>
    <string name="c111">Sarova Stanley, Standard Strt, City Centre\n
Tel: +254 (0)20 228830 Ext 8027/8047/807\n
        
        
    </string>
    <string name="w111"></string>
    <string name="m111">36.82280,-1.2585</string>
<string name="d112">Café Maghreb is a stylish Moroccan bar found within the Serena Hotel in Nairobi. Used by visitors to Kenya and business community, the Maghreb Bar is an all day café with an international style menu reflecting the best western and eastern cuisine.</string>
    <string name="c112">Serena Hotel, Kenyatta Avenue, City Centre\n
P.O. Box 46302 – 00100\n
Tel: +254 (0) 2822000 or 0733282200/1/2\n
Fax: +254 (0) 20 2725184\n

        
        
    </string>
    <string name="w112"></string>
    <string name="m112">36.8147,-1.2857</string>
<string name="d113">Debonairs mainstays include pizzas, hot subs, chicken wings and drinks. It offers free delivery for more than Ksh 500 worth of take out within a 5km radius of the restaurant. It would also deliver further but at an extra cost.</string>
    <string name="c113">Muidi Mbingu Street, City Centre\n
Westlands ( Mpaka Road)\n
P.O Box 49842-00100\n
Tel: 0708 749927\n

    </string>
    <string name="w113"></string>
    <string name="m113">36.81875,-1.28494</string>
<string name="d114">Steer is a South African fast food burger chain offering a wide range of meals at reasonable prices. It offers free delivery to customers from 11am to around 10pm their closing time.</string>
    <string name="c114"> Muindi  Mbingu Street, City Centre\n
The mall, Westlands\n
Caltex Petrol Station, Donholm\n
Village Market, Limuru road\n
Uchumi  Hyper, Ngong Road\n
Tel: 0708 783377\n
            
    </string>
    <string name="w114"></string>
    <string name="m114">36.82210,-1.28494</string>
<string name="d115">Cafe Deli is an amazing hangout with a great ambiance. Besides there coffee they over a variety of tantalizing cuisine. More so they have the best cakes in Nairobi that goes well with the wide range of coffees available!</string>
    <string name="c115"> 
    	No: 0707712287,0724912676\n
  
    </string>
    <string name="w115">http://cafedeli.co.ke</string>
    <string name="m115">36.82489,-1.28412</string>
<string name="d21">	Merchandise
We stock a wide range of merchandise, i.e. electronics and mattresses etc.We also weigh cereals/flour at the convenience of your pocket from 100gm onwards! 
•	Parking
The mall has ample and secure parking bay.
    
</string>
    <string name="c21">Westlands Arcade, Nairobi\n
Tel : 020-4448997, 020-8020087, 020-8082841\n
        
        
    </string>
    <string name="w21">http://uchumicorporate.co.ke/kenya</string>
    <string name="m21">36.80221,-1.26385</string>
<string name="d22">It has ample, clean, secure and easy accessible parking with a well marked basement section in case of need to protect your car from strong sunlight or avoiding wetness during rainy seasons.  There is a wide range of products; both foods and non-foods we have a rich blend of variety that keeps our motto ‘Your home of value’ ablaze.
Other services available are Pharmacy, an Ice Cream Parlour, Laundry services, a Gift Shop, Restaurant, Bata Shop, Photo studio, Beauty Shops among others.
 Business hours: 8.00am - 9.00pm\n   
</string>
    <string name="c22">Tel: 020-6004169, 020-6004275, 020-2062764, 020-2446583, 020-8082829, 0728-151750, 0728-151750
        
    </string>
    <string name="w22">http://uchumicorporate.co.ke</string>
</resources>