<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  
     android:background="@drawable/nai"
    android:orientation="vertical" >

    <!-- Included header.xml here -->

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inflatedId="@+id/header"
        android:layout="@layout/header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             
            android:orientation="horizontal" >

          <!--   <Button
                android:id="@+id/btn_intro"
                style="@style/HomeButton"
                android:background="#ede275"
                android:drawableTop="@drawable/start"
                android:onClick="onButtonClicker"
                android:text="@string/introTitle"
                android:textColorHighlight="#808080" />

            <Button
                android:id="@+id/btn_sacraments"
                style="@style/HomeButton"
                android:background="#ede275"
                android:drawableTop="@drawable/bread1"
                android:onClick="onButtonClicker"
                android:text="@string/sacramentsTitle" /> -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_hotels"
                style="@style/HomeButton"
                android:drawableTop="@drawable/hotels_"
                android:onClick="onButtonClicker"
                android:text="@string/prayersTitle"
                android:textColor="#FFFFFF"
                
                 />

            <Button
                android:id="@+id/btn_supermarkets"
                style="@style/HomeButton"
                android:drawableTop="@drawable/cart_"
                android:onClick="onButtonClicker"
                android:text="@string/quetionsTitle"
                android:textColor="#FFFFFF"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cabs"
                style="@style/HomeButton"
                android:drawableTop="@drawable/taxi_"
                android:onClick="onButtonClicker"
                android:text="@string/commandmentsTitle"
                android:textColor="#FFFFFF"
                 />

            <Button
                android:id="@+id/btn_attractions"
                style="@style/HomeButton"
                android:drawableTop="@drawable/attractions_"
                android:onClick="onButtonClicker"
                android:text="@string/creedTitle"
                android:textColor="#FFFFFF"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:textColor="#FFFFFF"
             >

            <Button
                android:id="@+id/btn_bars"
                style="@style/HomeButton"
                android:drawableTop="@drawable/bars_"
                android:onClick="onButtonClicker"
                android:text="@string/parishTitle"
                android:textColor="#FFFFFF"
                 />

            <Button
                android:id="@+id/btn_bus"
                style="@style/HomeButton"
                android:drawableTop="@drawable/bus_" 
                android:onClick="onButtonClicker"
                android:text="@string/aboutTitle"
                android:textColor="#FFFFFF"
                 />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>